# Simpsons-Hit-Run

./: .gitignore  CMakeLists.txt  README.md  SRR2.sln  pure3d-build.yml  setup_vcpkg.ps1  update_toolset.sh  uwp-toolchain.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: Build-Mesa-UWP.yml  Choreo.yml  Goodies.yml  build-it.yml  build.yml  build_choreo.bat  pure3d-build.yml
documentation/: SimpsonsCheats.txt
documentation/localization/built-in-errors/: built-inerrors_g.txt
src/game/: SRR2.vcxproj  SRR2.vcxproj.filters
src/game/ai/: actionbuttonhandler.cpp  actionbuttonhandler.h  actionbuttonmanager.cpp  state.cpp
src/game/ai/actor/: actoranimationwasp.h  actormanager.cpp  actormanager.h  intersectionlist.cpp  intersectionlist.h  stunnedbehaviour.cpp  ufobeamalwaysonbehaviour.cpp  ufobeamalwaysonbehaviour.h  ufobehaviour.h
src/game/atc/: atcloader.cpp  atcmanager.cpp
src/game/camera/: debugcam.cpp  followcam.cpp  supercam.h  supercamcentral.cpp  supercamcontroller.cpp  supersprintcam.cpp  surveillancecam.cpp  walkercam.cpp
src/game/cards/: cardgallery.cpp  cardsdb.cpp
src/game/cheats/: cheatinputhandler.cpp  cheatinputsystem.cpp  cheats.cpp
src/game/console/: console.cpp  console.h  upcase.cpp  upcase.h
src/game/constants/: movienames.h
src/game/contexts/: bootupcontext.cpp  context.h  playingcontext.cpp
src/game/contexts/gameplay/: gameplaycontext.cpp
src/game/data/: gamedatamanager.cpp  savegameinfo.cpp
src/game/data/memcard/: memorycardmanager.cpp  memorycardmanager.h
src/game/debug/: profiler.cpp  profiler.h
src/game/events/: eventmanager.cpp
src/game/input/: FEMouse.cpp  RealController.h  allinput.cpp  controller.h  forceeffect.h  inputmanager.cpp  inputmanager.h  rumbleeffect.cpp  usercontroller.cpp  usercontroller.h
src/game/interiors/: interiormanager.cpp  interiormanager.h
src/game/loading/: loadingmanager.cpp  locatorloader.cpp
src/game/main/: commandlineoptions.cpp  game.cpp  globaltypes.h  platform.h  tuidunaligned.h  win32main.cpp  win32platform.cpp  win32platform.h
src/game/memory/: createheap.cpp  map.h  memoryutilities.cpp  propstats.cpp  srrmemory.cpp  srrmemory.h  stlallocators.h
src/game/meta/: actioneventlocator.cpp  eventlocator.cpp  eventlocator.h
src/game/mission/: animatedicon.cpp  animatedicon.h  boss.h  gameplaymanager.cpp  gameplaymanager.h  mission.cpp  mission.h  missionscriptloader.cpp  missionscriptloader.h  missionstage.cpp  missionstage.h
src/game/mission/charactersheet/: charactersheetmanager.cpp  charactersheetmanager.h
src/game/mission/conditions/: vehiclecarryingstateprop.h
src/game/mission/objectives/: collectibleobjective.cpp  collectibleobjective.h  gotoobjective.cpp  gotoobjective.h  loadvehicleobjective.cpp
src/game/mission/respawnmanager/: respawnmanager.h
src/game/pedpaths/: path.cpp  pathmanager.cpp
src/game/presentation/: language.cpp  mouthflapper.h  presentation.cpp  tutorialmanager.cpp
src/game/presentation/fmvplayer/: fmvplayer.cpp  fmvplayer.h  fmvuserinputhandler.cpp
src/game/presentation/gui/: guientity.h  guimanager.cpp  guimenu.cpp  guiscreen.cpp  guiscreenmemcardcheck.cpp  guiscreenmemorycard.cpp  guiscreenmessage.cpp  guisystem.cpp  guiuserinputhandler.cpp
src/game/render/Culling/: FixedArray.h  ReserveArray.h  ScratchArray.h  SpatialTreeIter.h  SwapArray.h  UseArray.h  WorldScene.cpp
src/game/render/DSG/: LensFlareDSG.cpp
src/game/render/IntersectManager/: IntersectManager.cpp
src/game/render/Loaders/: FenceLoader.cpp
src/game/render/Particles/: particlemanager.cpp  particlemanager.h
src/game/render/RenderManager/: FrontEndRenderLayer.cpp  RenderManager.cpp
src/game/render/breakables/: breakablesmanager.cpp  breakablesmanager.h
src/game/roads/: geometry.h  lane.cpp  road.cpp  roadmanager.cpp  roadrender.cpp
src/game/sound/: soundmanager.cpp  soundmanager.h
src/game/sound/dialog/: conversationmatcher.cpp  dialogcoordinator.cpp  dialoglist.cpp
src/game/sound/music/: musicplayer.cpp
src/game/sound/soundrenderer/: dasoundplayer.cpp  idasoundtuner.h  soundnucleus.cpp  soundresourcemanager.cpp  soundresourcemanager.h  soundtuner.cpp
src/game/supersprint/: supersprintmanager.cpp
src/game/worldsim/: groundplanepool.cpp  hitnrunmanager.cpp  vehiclecentral.cpp  vehiclecentral.h  worldphysicsmanager.cpp
src/game/worldsim/character/: character.cpp  charactermanager.cpp  charactermappable.cpp
src/game/worldsim/coins/: coinmanager.cpp  coinmanager.h  sparkle.cpp
src/game/worldsim/harass/: chasemanager.cpp  chasemanager.h
src/game/worldsim/redbrick/: geometryvehicle.cpp  vehicleinit.cpp
src/libs/: add_x64.sh  update_toolset.sh
src/libs/choreo/: CMakeLists.txt  choreo.vcxproj  choreo.vcxproj.filters
src/libs/choreo/include/choreo/: basebank.hpp  buildconfig.hpp  scriptwriter.hpp  utility.hpp
src/libs/choreo/src/: load.cpp  scriptreader.cpp  scriptwriter.cpp  utility.cpp
src/libs/poser/: poser.vcxproj  poser.vcxproj.filters
src/libs/pure3d/: Pure3D.vcxproj  Pure3D.vcxproj.filters
src/libs/pure3d/constants/: version.hpp
src/libs/pure3d/p3d/: array.hpp  billboardobject.cpp  billboardobject.hpp  bmp.cpp  buildconfig.hpp  dxtn.cpp  imagefactory.cpp  imagefactory.hpp  loadmanager.cpp  plat_filemap.hpp  plat_types.hpp  platform.hpp  png.cpp  primgroup.cpp  pure3d.hpp  queue.hpp  rawimage.cpp  shader.cpp  shadow.cpp  targa.cpp  utility.cpp  utility.hpp
src/libs/pure3d/pddi/: buildconfig.hpp  pddi.hpp  pddienum.hpp  pddiext.hpp  pdditype.hpp  pddiwin32.hpp
src/libs/radcontent/: radcontent.vcxproj  radcontent.vcxproj.filters
src/libs/radcore/: radcore.vcxproj  radcore.vcxproj.filters
src/libs/radmath/: radmath.vcxproj
src/libs/radmovie/: radmovie.vcxproj  radmovie.vcxproj.filters
src/libs/radmusic/: radmusic.vcxproj  radmusic.vcxproj.filters
src/libs/radscript/: radscript.vcxproj  radscript.vcxproj.filters
src/libs/radsound/: radsound.vcxproj  radsound.vcxproj.filters  releasenotes.txt
src/libs/scrooby/: ScroobyLib.vcxproj  ScroobyLib.vcxproj.filters
src/libs/sim/: sim.vcxproj  sim.vcxproj.filters
(+232 files in other folders)
